--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+.BannerLogo{
+  max-width: 100%;
+  width: 100%;
+  height: 15pc;
+
+}
+
+.Navbar{
+  background-color: cadetblue;
+  padding-bottom: 25px;
+  width: auto;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +19,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
